update twitter link and mkdocs.yml inv

--- a/cavapa_docs.yml
+++ b/cavapa_docs.yml
@@ -62,7 +62,7 @@ extra:
     - icon: 'fontawesome/brands/github-alt'
       link: 'https://github.com/gregruthenbeck'
     - icon: 'fontawesome/brands/twitter'
-      link: 'https://twitter.com/piris314en'
+      link: 'https://twitter.com/gruthen'
 
 # Page tree
 nav:
