--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,25 +1,9 @@
 {
-    "short_name": "MkDocs",
-    "name": "MkDocs Material Boilerplate",
-    "description": "MkDocs Material Boilerplate (Starter Kit) - Deploy documentation to hosting platforms (Netlify, GitHub Pages, GitLab Pages, and AWS Amplify Console) with CircleCI, Docker, pipenv, and CI/CD",
+    "short_name": "CAVAPA",
+    "name": "CAVAPA - Motion Metrics from Video",
+    "description": "Computer Assisted Video Analysis of Physical Activity",
     "lang": "en-US",
-    "icons": [
-        {
-            "src": "images/graduate-cap.48x48.png",
-            "type": "image/png",
-            "sizes": "48x48"
-        },
-        {
-            "src": "images/graduate-cap.96x96.png",
-            "type": "image/png",
-            "sizes": "96x96"
-        },
-        {
-            "src": "images/graduate-cap.192x192.png",
-            "type": "image/png",
-            "sizes": "192x192"
-        }
-    ],
+    "icons":[{"src":"images/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"images/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],
     "start_url": "index.html",
     "background_color": "#2196F3",
     "theme_color": "#2196F3",
