--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
--i https://pypi.org/simple/
-click==7.1.2
-future==0.18.2
+-i https://pypi.org/simple
+click==8.0.1; python_version >= '3.6'
+future==0.18.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 jinja2==2.11.2
-joblib==0.17.0
+joblib==1.0.1; python_version >= '3.6'
 livereload==2.6.3
 lunr[languages]==0.5.8
-markdown==3.3.3
-markupsafe==2.0.0a1
-mkdocs-material-extensions==1.0.1
+markdown==3.3.4; python_version >= '3.6'
+markupsafe==2.0.1; python_version >= '3.6'
+mkdocs-material-extensions==1.0.1; python_version >= '3.5'
 mkdocs-material==6.1.2
 mkdocs==1.1.2
-nltk==3.5
+nltk==3.6.2
 prompt-toolkit==3.0.8
-pygments==2.7.2
-pymdown-extensions==8.0.1
+pygments>=2.7.4
+pymdown-extensions==8.2; python_version >= '3.6'
 python-markdown-math==0.8
-pyyaml==5.3.1
-regex==2020.10.28
-six==1.15.0
-tornado==6.1
-tqdm==4.51.0
+pyyaml>=5.4
+regex==2021.4.4
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tornado==6.1; python_version >= '3.5'
+tqdm==4.60.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 wcwidth==0.2.5
