--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "mkdocs build --config-file cavapa_docs.yml"
+command = "mkdocs build --config-file mkdocs.yml"
 publish = "site"
