update Pipfile.lock to with python 3.12

--- a/Pipfile
+++ b/Pipfile
@@ -16,10 +16,10 @@ Jinja2 = "==2.11.2"
 invoke = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.12"
 
 [pipenv]
-allow_prereleases = true
+allow_prereleases = false
 
 [scripts]
 version = "mkdocs --version"
