update footer: last updated XXX

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_author: 'gregruthenbeck'
 site_url: 'https://cavapa.ruthenbeck.io/'
 
 # Copyright
-copyright: '&copy; 2021 Greg Ruthenbeck'
+copyright: '&copy; 2021 Greg Ruthenbeck. Last updated Nov 2024.'
 
 # Repository
 repo_name: 'GitHub'
