--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
--i https://pypi.org/simple
-click==8.0.1; python_version >= '3.6'
-future==0.18.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-jinja2==2.11.2
-joblib==1.0.1; python_version >= '3.6'
-livereload==2.6.3
-lunr[languages]==0.5.8
-markdown==3.3.4; python_version >= '3.6'
-markupsafe==2.0.1; python_version >= '3.6'
-mkdocs-material-extensions==1.0.1; python_version >= '3.5'
+click==8.1.7
+future==1.0.0
+ghp-import==2.1.0
+invoke==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+livereload==2.7.0
+lunr==0.5.8
+Markdown==3.7
+MarkupSafe==3.0.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
 mkdocs-material==6.1.2
-mkdocs==1.1.2
-nltk==3.6.2
+mkdocs-material-extensions==1.3.1
+nltk==3.9.1
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
 prompt-toolkit==3.0.8
-pygments>=2.7.4
-pymdown-extensions==8.2; python_version >= '3.6'
+Pygments==2.7.2
+pymdown-extensions==10.12
+python-dateutil==2.9.0.post0
 python-markdown-math==0.8
-pyyaml>=5.4
-regex==2021.4.4
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-tornado==6.1; python_version >= '3.5'
-tqdm==4.60.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-wcwidth==0.2.5
+PyYAML==5.3.1
+pyyaml_env_tag==0.1
+regex==2024.11.6
+setuptools==75.6.0
+six==1.16.0
+tornado==6.4.2
+tqdm==4.67.0
+watchdog==6.0.0
+wcwidth==0.2.13
