--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ invoke==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 livereload==2.7.0
-lunr==0.5.8
+lunr>=0.5.8
 Markdown==3.7
 MarkupSafe==3.0.2
 mergedeep==1.3.4
@@ -18,11 +18,11 @@ packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
 prompt-toolkit==3.0.8
-Pygments==2.7.2
+Pygments>=2.15.0
 pymdown-extensions==10.12
 python-dateutil==2.9.0.post0
 python-markdown-math==0.8
-PyYAML==5.3.1
+PyYAML>=5.4.0
 pyyaml_env_tag==0.1
 regex==2024.11.6
 setuptools==75.6.0
